# RaftDataParser

./: README.md  setup.cfg
src/raft_data_parser/: csv_object.py  main.py
src/raft_data_parser/scriptable_object/: fuel_value.py
