
[metadata]
name = raft_data_parser
version = 0.1
author = Dean Stensrud
description = Parses dumped Raft Data
url = https://github.com/Tarnre/RaftDataParser.git
keywords = Raft, Data, Game


[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    raft-parse = raft_data_parser.main:main